alterando o scss das pages e arrumando landingPage

--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -1,6 +1,6 @@
 @import '../../stylesheets/colors';
 
-.container {
+.blue {
     background-color: $color-azul-nav;
     border-radius: 5px;
     padding: 10px;
