--- a/src/pages/menu/styles.scss
+++ b/src/pages/menu/styles.scss
@@ -1,8 +1,6 @@
 @import '../../stylesheets/colors';
 
-.container{
-
-    max-width: 45%;
+.blue{
     background-color: $color-azul-nav;
     border-radius: 5px;
     padding: 10px;
