--- a/src/pages/landingPage/styles.scss
+++ b/src/pages/landingPage/styles.scss
@@ -1,18 +1,21 @@
 @import '../../stylesheets/colors';
 
-.container{
-
-    max-width: 85%;
+.blue{
     background-color: $color-azul-nav;
     border-radius: 5px;
-    padding: 10px;
     h2, h5, p, .text {
         color: $color-branco;
     }
-    .icon {
-        display: flex;
-        justify-content: center;
-    }
+}
+
+.texto {
+    font-size: 25px;
+}
+
+.title {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 50px;
 }
 
 .botao {
@@ -25,4 +28,8 @@
 .white {
     background-color: $color-branco;
     color: #000000;
+}
+
+.img {
+    height: 80vh;
 }
