Adicionado espacamento entre o icone e nome do botao e aumentado o tamanho dos icones

--- a/src/pages/menu/styles.scss
+++ b/src/pages/menu/styles.scss
@@ -30,7 +30,15 @@
     color: #FFF;
 }
 
+
 .botao_icon{
+    justify-content: center;
     padding: 8px;
     color: #fff;
 }
+
+.botao_icon svg{
+    margin: .5em;
+}
+
+
