Corrigido alinhamento tela de login e adicionado um alt para imagem da landing page

--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -28,3 +28,11 @@
     background-color: $color-verde-accept;
     color: $color-branco;
 }
+
+.alinhamento{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+}
