Criado cor cinza no arquivo de cores e add na tela de perfil_usuario

--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -4,3 +4,4 @@ $color-azul-claro-cards: #828DBB;
 $color-verde-accept: #388C55;
 $color-marrom-cancel: #8C4F4D;
 $color-branco: #FFFFFF;
+$color-cinza: #808080;
