Adicionado imagem para perfil de usuario

--- a/src/pages/perfil_usuario/styles.scss
+++ b/src/pages/perfil_usuario/styles.scss
@@ -10,6 +10,7 @@
     .icon {
         display: flex;
         justify-content: center;
+        
     }
     
 }
@@ -27,7 +28,7 @@
     align-items: center;
     justify-content: center;
     padding: 1em;
-    color: #fff;
+    color: #ffffff;
 }
 
 .perfil svg{
@@ -63,4 +64,13 @@
 .green {
     background-color: $color-verde-accept;
     color: $color-branco;
+}
+
+.img_circle{
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.img_circle img{
+    border-radius: 50%;
 }
