--- a/src/pages/filtro_imoveis/styles.scss
+++ b/src/pages/filtro_imoveis/styles.scss
@@ -52,7 +52,7 @@
     border: none;
     border-radius: 10px;
     padding: 8px;
-    width: 50%;
+    width: 60%;
 }
 
 
@@ -66,6 +66,11 @@
     color: $color-branco;
 }
 
+.brown{
+    background-color: $color-marrom-cancel;
+    color: $color-branco;
+}
+
 .img_circle{
     display: inline-block;
     border-radius: 50%;
@@ -75,3 +80,12 @@
     border-radius: 50%;
 }
 
+.btn-direita{
+    text-align: left;
+    
+}
+
+.btn-esquerda{
+    text-align: right;
+
+}
